tests/purs/passing/ExportExplicit2.purs
module Main where

import M1
import Effect.Console (log)

testBar = bar

main = log "Done"
