tests/purs/failing/ModuleNameUnderscoreMiddle.purs
-- @shouldFailWith ErrorParsingModule
module Module_NameHasUnderscore where

import Effect.Console (log)

main = log "Done"
